# SVEQ

./: CMakeLists.txt  README.md
resource/: SVEQ_editor.rc  SVEQ_editor.uidesc  au-info.plist  win32resource.rc
source/: SVEQ_cids.h  SVEQ_controller.cpp  SVEQ_controller.h  SVEQ_entry.cpp  SVEQ_processor.cpp  SVEQ_processor.h  version.h
